--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,6 @@
         <a id="menuBio" href="/biographies.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>📖</span> ביוגרפיות</a>
         <a id="menuStats" href="/family-stats.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>📊</span> סטטיסטיקות</a>
         <a id="menuUpdate" href="/update-request.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md">עדכון פרטים</a>
-        <a id="menuUploadVideo" href="/upload-video.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md">העלאת סרטון</a>
         <a id="menuSearchAI" href="/search-ai.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md">חיפוש AI</a>
         <a id="menuMigration" href="/migration-map.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md">מפת נדודים</a>
         <a id="menuNewsletter" href="/newsletter.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>📰</span> עלון</a>
@@ -164,7 +163,7 @@
                 footerText: "© 2025 אתר המשפחה • נבנה באהבה ע\"י המשפחה •",
                 adminLink: "🛠️ ניהול",
                 // FIX: Corrected syntax errors (missing commas, misplaced characters) in the menus array.
-                menus: ["🏠 עמוד ראשי", "ℹ️ עמוד העדכונים", "🧬 עץ המשפחה", "📖 ספר משפחתי", "🧑‍💻 צ'אט AI", "📩 אמצעי תקשורת משפחתיים", "🖼️ גלריית תמונות", "🕯️ קיר זיכרון", "🗓️ ציר זמן", "📆 לוח שנה", "👪 פורום משפחתי", "📖 ביוגרפיות", "📊 סטטיסטיקות", "עדכון פרטים", "העלאת סרטון", "חיפוש AI", "מפת נדודים", "📰 עלון", "🔐 כניסת משתמשים", "התנתקות"],
+                menus: ["🏠 עמוד ראשי", "ℹ️ עמוד העדכונים", "🧬 עץ המשפחה", "📖 ספר משפחתי", "🧑‍💻 צ'אט AI", "📩 אמצעי תקשורת משפחתיים", "🖼️ גלריית תמונות", "🕯️ קיר זיכרון", "🗓️ ציר זמן", "📆 לוח שנה", "👪 פורום משפחתי", "📖 ביוגרפיות", "📊 סטטיסטיקות", "עדכון פרטים", "חיפוש AI", "מפת נדודים", "📰 עלון", "🔐 כניסת משתמשים", "התנתקות"],
                 loggedInAs: "מחובר/ת כ:", role: "תפקיד:", familySide: "צד משפחתי:", guest: "אורח"
             },
             en: {
@@ -183,7 +182,7 @@
                 footerText: "© 2025 Family Website • Built with love by the family •",
                 adminLink: "🛠️ Admin",
                  // FIX: Corrected syntax errors (missing commas) in the menus array.
-                menus: ["🏠 Home", "ℹ️ Updates", "🧬 Family Tree", "📖 Family Book", "🧑‍💻 AI Chat", "📩 Family Contacts", "🖼️ Gallery", "🕯️ Memorial Wall", "🗓️ Timeline", "📆 Calendar", "👪 Family Forum", "📖 Biographies", "📊 Statistics", "Update Details", "Upload Video", "AI Search", "Migration Map", "📰 Newsletter", "🔐 Login", "Logout"],
+                menus: ["🏠 Home", "ℹ️ Updates", "🧬 Family Tree", "📖 Family Book", "🧑‍💻 AI Chat", "📩 Family Contacts", "🖼️ Gallery", "🕯️ Memorial Wall", "🗓️ Timeline", "📆 Calendar", "👪 Family Forum", "📖 Biographies", "📊 Statistics", "Update Details", "AI Search", "Migration Map", "📰 Newsletter", "🔐 Login", "Logout"],
                 loggedInAs: "Logged in as:", role: "Role:", familySide: "Family Side:", guest: "Guest"
             },
             fr: {
@@ -221,7 +220,7 @@
                 footerText: "© 2025 פאמיליע וועבזייט • געבויט מיט ליבע דורך די פאמיליע •",
                 adminLink: "🛠️ אדמין",
                 // FIX: Corrected syntax errors (missing commas) in the menus array.
-                menus: ["🏠 הויפּט בלאַט", "ℹ️ דערהייבונגען", "🧬 פאמיליע בוים", "📖 משפּחה בוך", "🧑‍💻 אינטעליגענט טשאַט", "📩 פאמיליע קאנטאקטן", "🖼️ גאלעריע", "🕯️ אנדענק וואנט", "🗓️ צייט-ליניע", "📆 קאלענדאר", "👪 פאמיליע פארום", "📖 ביאגראפיעס", "📊 סטאטיסטיק", "דערהייבן דעטאלן", "הייבן ווידעא", "אינטעליגענט זוך", "מאַפּע פון וואַנדערונגען", "📰 נייַבלאַט", "🔐 איינזיין", "אויסלאגן"],
+                menus: ["🏠 הויפּט בלאַט", "ℹ️ דערהייבונגען", "🧬 פאמיליע בוים", "📖 משפּחה בוך", "🧑‍💻 אינטעליגענט טשאַט", "📩 פאמיליע קאנטאקטן", "🖼️ גאלעריע", "🕯️ אנדענק וואנט", "🗓️ צייט-ליניע", "📆 קאלענדאר", "👪 פאמיליע פארום", "📖 ביאגראפיעס", "📊 סטאטיסטיק", "דערהייבן דעטאלן", "אינטעליגענט זוך", "מאַפּע פון וואַנדערונגען", "📰 נייַבלאַט", "🔐 איינזיין", "אויסלאגן"],
                 loggedInAs: "אריינגעזען ווי:", role: "ראָלע:", familySide: "פאמיליע זייט:", guest: "גאַסט"
             },
     nl: {
@@ -268,7 +267,6 @@
     "⚙️ Beheer",
     "📊 Statistieken",
     "Bijwerken",
-    "🎥 Video uploaden"
   ],
   login: "Inloggen",
   logout: "Uitloggen",
