--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,6 @@
         <a id="menuHome" href="/" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md">🏠 עמוד ראשי</a>
         <a id="menuUpdates" href="about.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>ℹ️</span> עמוד העדכונים</a>
         <a id="menuTree" href="/tree-viewer.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>🧬</span> עץ המשפחה</a>
-        <!-- FIX: The <a> tag for "ספר משפחתי" was not closed. It is now fixed. -->
         <a id="menuBooks" href="/book.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>📖</span>ספר משפחתי</a>
         <a id="menuChat" href="/chat.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>🧑‍💻</span> צ'אט AI</a>
         <a id="menuContact" href="/contact-ways.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>📩</span> אמצעי תקשורת משפחתיים</a>
@@ -154,7 +153,7 @@
                 searchTitle: "🔍 חיפוש באתר",
                 searchPlaceholder: "הקלד שם או תיאור...",
                 sectionWelcome: "🌟 ברוכים הבאים למרכז המשפחתי",
-                intro1: "אתר זה נבנה עבור משפחות: בן אבו, אלחרר, מלכה, בן דוד, ברומברג, ברנבאום, פאס-שנק, ויינברגר, לייבנר, ואן דר ולדה, בהר, דה פריס, איטליאנדר, איזקס, צ'פון, ועוד – לשיתוף תמונות, הנצחות, עץ משפחה, הודעות ועוד.",
+                intro1: "אתר זה נבנה עבור משפחות: בן אבו, אלחרר, מלכה, בן דוד, ברומברג, ברנבאום, פאס,שנק, ויינברגר, לייבנר, ואן דר ולדה, איזקס ועוד – לשיתוף תמונות, הנצחות, עץ משפחה, הודעות ועוד.",
                 intro2: "ניתן להיכנס לפי צד משפחתי, לעדכן פרטים, לשוחח עם צ׳אט AI משפחתי ולחוות יחד היסטוריה מתועדת.",
                 sectionTree: "ברוכים הבאים לעץ המשפחה שלנו",
                 features: ["🌳 עץ משפחה אינטראקטיבי", "🔐 כניסת משתמשים והרשאות לפי צד משפחתי", "💬 קיר משפחתי לפוסטים ותגובות", "📨 מערכת הודעות פנימית", "🖼️ תצוגת גלריה למסמכים ותמונות", "🕯️ עמודי הנצחה עם נר דיגיטלי", "🌐 תפריט רב-לשוני", "🔍 חיפוש חכם", "📧 תמיכה בניוזלטר", "🤖 צ’אט AI משפחתי עם תמיכה בנתוני משפחה", "📱 תמיכה בעיצוב רספונסיבי לנייד"],
@@ -173,7 +172,7 @@
                 searchTitle: "🔍 Search the site",
                 searchPlaceholder: "Type a name or description...",
                 sectionWelcome: "🌟 Welcome to the Family Center",
-                intro1: "This website was built for all families: Ben Abou, Elharrar, Malka, Ben David, Bromberg, Barenbaum, Fass-Schneck, Weinberger, Leibner, van der Velde, Behr, de Vries, Italiaander, Izaks, Chapon, and more – to share photos, memorials, family tree, announcements and more.",
+                intro1: "This website was built for all families: Ben Abou, Elharrar, Malka, Ben David, Bromberg, Barenbaum, Fass,Schneck, Weinberger, Leibner, van der Velde,  Izaks and more – to share photos, memorials, family tree, announcements and more.",
                 intro2: "You can join by family side, update details, chat with the Family AI Chatbot and experience documented history together.",
                 sectionTree: "Welcome to our Family Tree",
                 features: ["🌳 Interactive Family Tree", "🔐 User login & permissions by family side", "💬 Family wall for posts & comments", "📨 Internal messaging system", "🖼️ Gallery view for documents & photos", "🕯️ Memorial pages with digital candles", "🌐 Multilingual Menu", "🔍 Smart search", "📧 Newsletter support", "🤖 Family AI Chat with family data", "📱 Responsive design for mobile"],
@@ -192,7 +191,7 @@
                 searchTitle: "🔍 Rechercher sur le site",
                 searchPlaceholder: "Tapez un nom ou une description...",
                 sectionWelcome: "🌟 Bienvenue au centre familial",
-                intro1: "Ce site a été créé pour toutes les familles : Ben Abou, Elharrar, Malka, Ben David, Bromberg, Barenbaum, Fass-Schneck, Weinberger, Leibner, van der Velde, Behr, de Vries, Italiaander, Izaks, Chapon, et plus – pour partager photos, commémorations, arbre généalogique, annonces et plus.",
+                intro1: "Ce site a été créé pour toutes les familles : Ben Abou, Elharrar, Malka, Ben David, Bromberg, Barenbaum, Fass-Schneck, Weinberger, Leibner, van der Velde,Izaks et plus – pour partager photos, commémorations, arbre généalogique, annonces et plus.",
                 intro2: "Vous pouvez entrer par côté familial, mettre à jour des détails, discuter avec le Chat IA Familial et vivre ensemble une histoire documentée.",
                 sectionTree: "Bienvenue dans notre arbre généalogique",
                 features: ["🌳 Arbre généalogique interactif", "🔐 Connexion & permissions par côté familial", "💬 Mur familial pour publications & commentaires", "📨 Système de messagerie interne", "🖼️ Galerie pour documents & photos", "🕯️ Pages commémoratives avec bougies numériques", "🌐 Menu multilingue", "🔍 Recherche intelligente", "📧 Support bulletin", "🤖 Chat IA Familial avec données de famille", "📱 Design réactif pour mobile"],
@@ -211,7 +210,7 @@
                 searchTitle: "🔍 זוך אויפן זייט",
                 searchPlaceholder: "שרייב א נאמען אדער באשרייבונג...",
                 sectionWelcome: "🌟 ברוך הבא צום פאמיליע צענטער",
-                intro1: "דער זייט איז געבויט געווארן פאר אלע פאמיליעס: בן אבו, אלהרר, מאלקא, בן דוד, ברומבערג, בארנבאום, פאס-שנעק, וויינבערגער, לייבנער, וואן דער וואלדע, בער, דע פריז, איטאליאנדער, יצחקס, שאפאן און מער – צו טיילן בילדער, אנדענקען, פאמיליע בוים, מעלדונגען און מער.",
+                intro1: "דער זייט איז געבויט געווארן פאר אלע פאמיליעס: בן אבו, אלהרר, מאלקא, בן דוד, ברומבערג, בארנבאום, פאס-שנעק, וויינבערגער, לייבנער, וואן דער וואלדע, יצחקס און מער – צו טיילן בילדער, אנדענקען, פאמיליע בוים, מעלדונגען און מער.",
                 intro2: "איר קענט אריינגיין לויט פאמיליע זייט, דערהייבן דעטאלן, שמועסן מיט דעם פאמיליע אינטעליגענט טשאַט און צוזאמען איבערלעבן דאקומענטירטע געשיכטע.",
                 sectionTree: "ברוך הבא צו אונדזער פאמיליע בוים",
                 features: ["🌳 אינטעראקטיוו פאמיליע בוים", "🔐 באנוצער איינזיין און דערלויבניש לויט פאמיליע זייט", "💬 פאמיליע וואנט פאר פאסטס און קאמענטארן", "📨 אינערלעך מעסעדזשינג סיסטעם", "🖼️ גאלעריע פאר דאקומענטן און בילדער", "🕯️ אנדענק בלאט מיט דיגיטאלישע ליכט", "🌐 מערשפראכיקע מעניו", "🔍 קלוגע זוך", "📧 נייַבלאַט שטיץ", "🤖 פאמיליע אינטעליגענט טשאַט מיט פאמיליע דאטן", "📱 רעספאנסיוו דיזיין פאר מאביל"],
@@ -224,58 +223,63 @@
                 loggedInAs: "אריינגעזען ווי:", role: "ראָלע:", familySide: "פאמיליע זייט:", guest: "גאַסט"
             },
     nl: {
-  title: "Familiewebsite - Ben Abou, Elharrar en meer",
-  welcomeTitle: "Welkom op de familiepagina",
-  welcomeSubtitle: "Ben Abou • Bromberg • Elharrar • en meer",
-  searchTitle: "🔍 Zoeken op de site",
-  searchPlaceholder: "Typ een naam of beschrijving...",
-  sectionWelcome: "Welkom bij onze familiegeschiedenis! Hier vind je stambomen, foto's, documenten en verhalen die generaties verbinden.",
-  sectionDiscover: "Ontdek de familiebanden, leer over onze oorsprong, en deel je eigen herinneringen.",
-  featuresTitle: "✨ Belangrijkste functies",
-  features: [
-    "Interactieve stamboomweergave",
-    "AI-chat voor genealogische vragen",
-    "Familiezoeker met slimme filters",
-    "Upload en deel foto's en documenten",
-    "Bekijk familiegebeurtenissen op de kalender",
-    "Vertaalbare inhoud (Hebreeuws / Engels / Frans / Nederlands)"
-  ],
-  familyTreeTitle: "🌳 Familiebomen",
-  familySides: [
-    "Ben Abou-familie",
-    "Elharrar-familie",
-    "Weinberger-Leibner-familie",
-    "Bromberg-Barenbaum-familie",
-    "Fass-Schneck-familie",
-    "van der Velde–Behr–de Vries–Italiaander–Izaks–Chapon"
-  ],
-  newsTitle: "📰 Laatste nieuws",
-  news: [
-    "Nieuwe foto's toegevoegd aan de Bromberg-familietak",
-    "Familie-evenement in voorbereiding — binnenkort meer details",
-    "AI-ondersteuning voor genealogische zoekopdrachten is nu actief"
-  ],
-  footer: "© 2025 Familieproject Ben Abou & Elharrar – Alle rechten voorbehouden",
-  menus: [
-    "🏠 Startpagina",
-    "🌳 Stamboom",
-    "📷 Gallerij",
-    "🗺️ Migratiekaart",
-    "🧠 AI & Chat",
-    "📅 Kalender",
-    "📧 Postvak",
-    "⚙️ Beheer",
-    "📊 Statistieken",
-    "Bijwerken",
-  ],
-  login: "Inloggen",
-  logout: "Uitloggen",
-  language: "Taal:",
-  loggedInAs: "Ingelogd als:",
-  role: "Rol:",
-  familySide: "Familietak:",
-  guest: "Gast"
-},
+{
+"title": "Familiewebsite - Ben Abou, Elharrar & meer",
+"welcomeTitle": "Welkom op de Familiewebsite",
+"welcomeSubtitle": "Ben Abou • Bromberg • Ellharrar • en meer",
+"searchTitle": "🔍 Zoek op de site",
+"searchPlaceholder": "Typ een naam of beschrijving...",
+"sectionWelcome": "🌟 Welkom bij het Familiecentrum",
+"intro1": "Deze website is gebouwd voor alle families: Ben Abou, Elharrar, Malka, Ben David, Bromberg, Barenbaum, Fass, Schneck, Weinberger, Leibner, van der Velde, Izaks en meer – om foto's, gedenktekens, stambomen, aankondigingen en meer te delen.",
+"intro2": "Je kunt je aansluiten via een familielijn, gegevens bijwerken, chatten met de Familie AI Chatbot en samen gedocumenteerde geschiedenis beleven.",
+"sectionTree": "Welkom bij onze Stamboom",
+"features": [
+"🌳 Interactieve Stamboom",
+"🔐 Gebruikerslogin & rechten per familielijn",
+"💬 Familiewand voor berichten & opmerkingen",
+"📨 Intern berichtensysteem",
+"🖼️ Galerijweergave voor documenten & foto's",
+"🕯️ Herdenkingspagina's met digitale kaarsen",
+"🌐 Meertalig Menu",
+"🔍 Slim zoeken",
+"📧 Nieuwsbriefondersteuning",
+"🤖 Familie AI Chat met familiegegevens",
+"📱 Responsief ontwerp voor mobiel"
+],
+"newsTitle": "Nieuws & Updates",
+"news": [
+"Foto's uploaden naar de stamboom is nu beschikbaar.",
+"Het interne berichtensysteem is geopend voor alle gebruikers.",
+"Je kunt een digitale kaars aansteken ter nagedachtenis van dierbaren."
+],
+"footerText": "© 2025 Familiewebsite • Gebouwd met liefde door de familie •",
+"adminLink": "🛠️ Beheer",
+"menus": [
+"🏠 Home",
+"ℹ️ Updates",
+"🧬 Stamboom",
+"📖 Familieboek",
+"🧑‍💻 AI Chat",
+"📩 Familiecontacten",
+"🖼️ Galerij",
+"🕯️ Herdenkingsmuur",
+"🗓️ Tijdlijn",
+"📆 Kalender",
+"👪 Familieforum",
+"📖 Biografieën",
+"📊 Statistieken",
+"Gegevens Bijwerken",
+"AI Zoeken",
+"Migratiekaart",
+"📰 Nieuwsbrief",
+"🔐 Inloggen",
+"Uitloggen"
+],
+"loggedInAs": "Ingelogd als:",
+"role": "Rol:",
+"familySide": "Familielijn:",
+"guest": "Gast"
+}
 
               };
 
