--- a/public/trees/Izaks.html
+++ b/public/trees/Izaks.html
@@ -132,8 +132,8 @@
 </head>
 <body class="bg-gray-50 p-4 md:p-8">
     <header class="text-center mb-8">
-        <h1 class="text-3xl md:text-4xl font-extrabold text-gray-800">🌳 Bromberg Family Tree</h1>
-        <p class="text-lg text-gray-600 mt-2">הצגת דורות מרובים עם תמיכה במספר בני זוג.</p>
+        <h1 class="text-3xl md:text-4xl font-extrabold text-gray-800">🌳 Izaks Family Tree</h1>
+        <p class="text-lg text-gray-600 mt-2">Introducing multiple generations with support for multiple spouses.</p>
         <p class="text-sm text-green-700 mt-2 font-bold">The tree is updated to October 2025- 7/5785</p>
     </header>
 
