Fix typos in French and Yiddish introductions

--- a/public/index.html
+++ b/public/index.html
@@ -191,7 +191,7 @@
                 searchTitle: "🔍 Rechercher sur le site",
                 searchPlaceholder: "Tapez un nom ou une description...",
                 sectionWelcome: "🌟 Bienvenue au centre familial",
-                intro1: "Ce site a été créé pour toutes les familles : Ben Abou, Elharrar, Malka, Ben David, Bromberg, Barenbaum, Fass-Schneck, Weinberger, Leibner, van der Velde,Izaks et plus – pour partager photos, commémorations, arbre généalogique, annonces et plus.",
+                intro1: "Ce site a été créé pour toutes les familles : Ben Abou, Elharrar, Malka, Ben David, Bromberg, Barenbaum, Fass,Schneck, Weinberger, Leibner, van der Velde,Izaks et plus – pour partager photos, commémorations, arbre généalogique, annonces et plus.",
                 intro2: "Vous pouvez entrer par côté familial, mettre à jour des détails, discuter avec le Chat IA Familial et vivre ensemble une histoire documentée.",
                 sectionTree: "Bienvenue dans notre arbre généalogique",
                 features: ["🌳 Arbre généalogique interactif", "🔐 Connexion & permissions par côté familial", "💬 Mur familial pour publications & commentaires", "📨 Système de messagerie interne", "🖼️ Galerie pour documents & photos", "🕯️ Pages commémoratives avec bougies numériques", "🌐 Menu multilingue", "🔍 Recherche intelligente", "📧 Support bulletin", "🤖 Chat IA Familial avec données de famille", "📱 Design réactif pour mobile"],
@@ -210,7 +210,7 @@
                 searchTitle: "🔍 זוך אויפן זייט",
                 searchPlaceholder: "שרייב א נאמען אדער באשרייבונג...",
                 sectionWelcome: "🌟 ברוך הבא צום פאמיליע צענטער",
-                intro1: "דער זייט איז געבויט געווארן פאר אלע פאמיליעס: בן אבו, אלהרר, מאלקא, בן דוד, ברומבערג, בארנבאום, פאס-שנעק, וויינבערגער, לייבנער, וואן דער וואלדע, יצחקס און מער – צו טיילן בילדער, אנדענקען, פאמיליע בוים, מעלדונגען און מער.",
+                intro1: "דער זייט איז געבויט געווארן פאר אלע פאמיליעס: בן אבו, אלהרר, מאלקא, בן דוד, ברומבערג, בארנבאום, פאס,שנעק, וויינבערגער, לייבנער, וואן דער וואלדע, יצחקס און מער – צו טיילן בילדער, אנדענקען, פאמיליע בוים, מעלדונגען און מער.",
                 intro2: "איר קענט אריינגיין לויט פאמיליע זייט, דערהייבן דעטאלן, שמועסן מיט דעם פאמיליע אינטעליגענט טשאַט און צוזאמען איבערלעבן דאקומענטירטע געשיכטע.",
                 sectionTree: "ברוך הבא צו אונדזער פאמיליע בוים",
                 features: ["🌳 אינטעראקטיוו פאמיליע בוים", "🔐 באנוצער איינזיין און דערלויבניש לויט פאמיליע זייט", "💬 פאמיליע וואנט פאר פאסטס און קאמענטארן", "📨 אינערלעך מעסעדזשינג סיסטעם", "🖼️ גאלעריע פאר דאקומענטן און בילדער", "🕯️ אנדענק בלאט מיט דיגיטאלישע ליכט", "🌐 מערשפראכיקע מעניו", "🔍 קלוגע זוך", "📧 נייַבלאַט שטיץ", "🤖 פאמיליע אינטעליגענט טשאַט מיט פאמיליע דאטן", "📱 רעספאנסיוו דיזיין פאר מאביל"],
