Update family website introductions with 'Elook'

--- a/public/index.html
+++ b/public/index.html
@@ -153,7 +153,7 @@
                 searchTitle: "🔍 חיפוש באתר",
                 searchPlaceholder: "הקלד שם או תיאור...",
                 sectionWelcome: "🌟 ברוכים הבאים למרכז המשפחתי",
-                intro1: "אתר זה נבנה עבור משפחות: בן אבו, אלחרר, מלכה, בן דוד, ברומברג, ברנבאום, פאס,שנק, ויינברגר, לייבנר, ואן דר ולדה, איזקס ועוד – לשיתוף תמונות, הנצחות, עץ משפחה, הודעות ועוד.",
+                intro1: "אתר זה נבנה עבור משפחות: בן אבו, אלחרר, מלכה, בן דוד,אלוק, ברומברג, ברנבאום, פאס,שנק, ויינברגר, לייבנר, ואן דר ולדה, איזקס ועוד – לשיתוף תמונות, הנצחות, עץ משפחה, הודעות ועוד.",
                 intro2: "ניתן להיכנס לפי צד משפחתי, לעדכן פרטים, לשוחח עם צ׳אט AI משפחתי ולחוות יחד היסטוריה מתועדת.",
                 sectionTree: "ברוכים הבאים לעץ המשפחה שלנו",
                 features: ["🌳 עץ משפחה אינטראקטיבי", "🔐 כניסת משתמשים והרשאות לפי צד משפחתי", "💬 קיר משפחתי לפוסטים ותגובות", "📨 מערכת הודעות פנימית", "🖼️ תצוגת גלריה למסמכים ותמונות", "🕯️ עמודי הנצחה עם נר דיגיטלי", "🌐 תפריט רב-לשוני", "🔍 חיפוש חכם", "📧 תמיכה בניוזלטר", "🤖 צ’אט AI משפחתי עם תמיכה בנתוני משפחה", "📱 תמיכה בעיצוב רספונסיבי לנייד"],
@@ -172,7 +172,7 @@
                 searchTitle: "🔍 Search the site",
                 searchPlaceholder: "Type a name or description...",
                 sectionWelcome: "🌟 Welcome to the Family Center",
-                intro1: "This website was built for all families: Ben Abou, Elharrar, Malka, Ben David, Bromberg, Barenbaum, Fass,Schneck, Weinberger, Leibner, van der Velde,  Izaks and more – to share photos, memorials, family tree, announcements and more.",
+                intro1: "This website was built for all families: Ben Abou, Elharrar, Malka, Ben David, Elook, Bromberg, Barenbaum, Fass,Schneck, Weinberger, Leibner, van der Velde, Izaks and more – to share photos, memorials, family tree, announcements and more.",
                 intro2: "You can join by family side, update details, chat with the Family AI Chatbot and experience documented history together.",
                 sectionTree: "Welcome to our Family Tree",
                 features: ["🌳 Interactive Family Tree", "🔐 User login & permissions by family side", "💬 Family wall for posts & comments", "📨 Internal messaging system", "🖼️ Gallery view for documents & photos", "🕯️ Memorial pages with digital candles", "🌐 Multilingual Menu", "🔍 Smart search", "📧 Newsletter support", "🤖 Family AI Chat with family data", "📱 Responsive design for mobile"],
@@ -191,7 +191,7 @@
                 searchTitle: "🔍 Rechercher sur le site",
                 searchPlaceholder: "Tapez un nom ou une description...",
                 sectionWelcome: "🌟 Bienvenue au centre familial",
-                intro1: "Ce site a été créé pour toutes les familles : Ben Abou, Elharrar, Malka, Ben David, Bromberg, Barenbaum, Fass,Schneck, Weinberger, Leibner, van der Velde,Izaks et plus – pour partager photos, commémorations, arbre généalogique, annonces et plus.",
+                intro1: "Ce site a été créé pour toutes les familles : Ben Abou, Elharrar, Malka, Ben David, Elook, Bromberg, Barenbaum, Fass,Schneck, Weinberger, Leibner, van der Velde,Izaks et plus – pour partager photos, commémorations, arbre généalogique, annonces et plus.",
                 intro2: "Vous pouvez entrer par côté familial, mettre à jour des détails, discuter avec le Chat IA Familial et vivre ensemble une histoire documentée.",
                 sectionTree: "Bienvenue dans notre arbre généalogique",
                 features: ["🌳 Arbre généalogique interactif", "🔐 Connexion & permissions par côté familial", "💬 Mur familial pour publications & commentaires", "📨 Système de messagerie interne", "🖼️ Galerie pour documents & photos", "🕯️ Pages commémoratives avec bougies numériques", "🌐 Menu multilingue", "🔍 Recherche intelligente", "📧 Support bulletin", "🤖 Chat IA Familial avec données de famille", "📱 Design réactif pour mobile"],
@@ -229,7 +229,7 @@
 "searchTitle": "🔍 Zoek op de site",
 "searchPlaceholder": "Typ een naam of beschrijving...",
 "sectionWelcome": "🌟 Welkom bij het Familiecentrum",
-"intro1": "Deze website is gebouwd voor alle families: Ben Abou, Elharrar, Malka, Ben David, Bromberg, Barenbaum, Fass, Schneck, Weinberger, Leibner, van der Velde, Izaks en meer – om foto's, gedenktekens, stambomen, aankondigingen en meer te delen.",
+"intro1": "Deze website is gebouwd voor alle families: Ben Abou, Elharrar, Malka, Ben David, Elook, Bromberg, Barenbaum, Fass, Schneck, Weinberger, Leibner, van der Velde, Izaks en meer – om foto's, gedenktekens, stambomen, aankondigingen en meer te delen.",
 "intro2": "Je kunt je aansluiten via een familielijn, gegevens bijwerken, chatten met de Familie AI Chatbot en samen gedocumenteerde geschiedenis beleven.",
 "sectionTree": "Welkom bij onze Stamboom",
 "features": [
