--- a/public/a.html
+++ b/public/a.html
@@ -73,7 +73,8 @@
       mainContent.style.display = "block";
       
       const familyInfoElement = document.getElementById("family-info");
-      familyInfoElement.innerHTML = `<span class="text-red-600 font-bold bg-red-100 p-2 rounded">${message}</span>`;
+        // תוקן: שימוש בשרשור מחרוזות במקום Template Literal
+      familyInfoElement.innerHTML = '<span class="text-red-600 font-bold bg-red-100 p-2 rounded">' + message + '</span>';
       
       document.querySelectorAll('.chart-container').forEach(el => el.style.display = 'none');
       document.getElementById("main-title").style.display = "none";
@@ -89,7 +90,7 @@
     function extractFamilyData(rawText) {
       // 1. ביטוי רגולרי גרידי לחיפוש מערך שמתחיל ב- '[' ואחריו לפחות אובייקט אחד שמתחיל ב- '{' ומסתיים ב- '}]'
       // [[\s\S]*] - מחפש את הבלוק הגדול ביותר בין הסוגריים המרובעים החיצוניים.
-      const jsonRegex = /(\[\s*\{[\s\S]*\}\s*\])/; 
+      const jsonRegex = /(\[\s*\{[\s\S]*\}\s*\])/; 
       const match = rawText.match(jsonRegex);
 
       if (match && match[1]) {
@@ -107,8 +108,7 @@
           }
         } catch (e) {
           console.error("שגיאת ניתוח JSON לאחר חילוץ וניקוי:", e);
-          // ניתן להציג חלקיק מהמחרוזת שנכשלה לצורך איתור באגים נוסף
-          // console.log("JSON String that failed to parse (first 500 chars):", jsonString.substring(0, 500));
+          // תוקן: שימוש בשרשור מחרוזות במקום Template Literal
           throw new Error("הנתונים חולצו אך עדיין אינם במבנה JSON תקין, גם לאחר ניקוי פסיקים מיותרים. בדוק את מבנה הקובץ המקורי.");
         }
       }
@@ -127,7 +127,8 @@
         familyInfoElement.textContent = "שולף פרטי משתמש...";
         const userResponse = await fetch('/api/user');
         if (!userResponse.ok) {
-          throw new Error(`שגיאה ${userResponse.status}: לא ניתן לטעון פרטי משתמש.`);
+            // תוקן: שימוש בשרשור מחרוזות במקום Template Literal
+          throw new Error('שגיאה ' + userResponse.status + ': לא ניתן לטעון פרטי משתמש.');
         }
         
         const userData = await userResponse.json();
@@ -138,12 +139,15 @@
         }
 
         // 2. שליפת קובץ הנתונים כטקסט
-        const dataUrl = `/trees/${familySide}.html`;
-        familyInfoElement.textContent = `טוען קובץ גולמי עבור המשפחה: ${familySide} מ: ${dataUrl}...`;
+        // תוקן: שימוש בשרשור מחרוזות במקום Template Literal
+        const dataUrl = '/trees/' + familySide + '.html';
+        // תוקן: שימוש בשרשור מחרוזות במקום Template Literal
+        familyInfoElement.textContent = 'טוען קובץ גולמי עבור המשפחה: ' + familySide + ' מ: ' + dataUrl + '...';
         
         const dataResponse = await fetch(dataUrl);
         if (!dataResponse.ok) {
-          throw new Error(`שגיאה ${dataResponse.status}: קובץ הנתונים ${familySide}.html לא נמצא בשרת.`);
+            // תוקן: שימוש בשרשור מחרוזות במקום Template Literal
+          throw new Error('שגיאה ' + dataResponse.status + ': קובץ הנתונים ' + familySide + '.html לא נמצא בשרת.');
         }
         
         // טוען את כל הקובץ כטקסט (כדי לחלץ את ה-JSON מתוכו)
@@ -166,7 +170,8 @@
 
         if (cleanedData.length === 0 && rawData.length > 0) {
           console.warn("Raw data length:", rawData.length);
-          throw new Error(`הנתונים חולצו בהצלחה, אך לא נמצאו רשומות תקינות לסטטיסטיקות (כנראה שדות מגדר/שנת לידה חסרים).`);
+            // תוקן: שימוש בשרשור מחרוזות במקום Template Literal
+          throw new Error('הנתונים חולצו בהצלחה, אך לא נמצאו רשומות תקינות לסטטיסטיקות (כנראה שדות מגדר/שנת לידה חסרים).');
         } else if (cleanedData.length === 0) {
           throw new Error("לא נמצאו נתונים כלל לעיבוד סטטיסטי.");
         }
@@ -222,7 +227,8 @@
         const genLabels = sortedGenerations.map(([index, count]) => {
             const startYear = BASE_YEAR + (+index * GENERATION_SPAN);
             const endYear = startYear + GENERATION_SPAN - 1;
-            return `${startYear} - ${endYear}`;
+            // תוקן: שימוש בשרשור מחרוזות במקום Template Literal
+            return startYear + ' - ' + endYear;
         });
         const genValues = sortedGenerations.map(([index, count]) => count);
 
@@ -244,7 +250,7 @@
             responsive: true,
             scales: {
               y: { beginAtZero: true },
-              x: { reverse: true } 
+              x: { reverse: true } 
             },
             plugins: {
               tooltip: { rtl: true }
@@ -255,12 +261,14 @@
         // 5. סיום טעינה
         document.getElementById("loading").style.display = "none";
         document.getElementById("main-content").style.display = "block";
-        familyInfoElement.innerHTML = `<span class="text-green-700 font-semibold">הנתונים נטענו בהצלחה עבור המשפחה: <b>${familySide}</b>. סך אנשים מעובדים: ${cleanedData.length}</span>`;
+        // תוקן: שימוש בשרשור מחרוזות במקום Template Literal
+        familyInfoElement.innerHTML = '<span class="text-green-700 font-semibold">הנתונים נטענו בהצלחה עבור המשפחה: <b>' + familySide + '</b>. סך אנשים מעובדים: ' + cleanedData.length + '</span>';
 
 
       } catch (error) {
         console.error("שגיאה קריטית:", error);
-        displayError(`אירעה שגיאה בטעינת הנתונים: ${error.message}`);
+        // תוקן: שימוש בשרשור מחרוזות במקום Template Literal
+        displayError('אירעה שגיאה בטעינת הנתונים: ' + error.message);
       }
     }
 
