--- a/public/a.html
+++ b/public/a.html
@@ -80,32 +80,44 @@
     }
 
     /**
-     * פונקציה משופרת לחילוץ מערך JSON של נתונים מתוך טקסט גולמי מעורב.
-     * (ללא שינוי מהקובץ המקורי)
+     * פונקציה חזקה לחילוץ מערך JSON של נתונים מתוך טקסט גולמי (כגון קובץ HTML).
+     * היא מחפשת את הגבולות החיצוניים של המערך ([...]) ומתעלמת מהטקסט המקיף.
      */
     function extractFamilyData(rawText) {
-      const jsonRegex = /(\[\s*\{[\s\S]*\}\s*\])/; 
-      const match = rawText.match(jsonRegex);
+      // חיפוש אינדקס הפתיחה של המערך הראשון
+      const start = rawText.indexOf('[');
+      // חיפוש אינדקס הסגירה של המערך האחרון (הכי חיצוני)
+      const end = rawText.lastIndexOf(']');
 
-      if (match && match[1]) {
-        let jsonString = match[1].trim();
+      if (start === -1 || end === -1 || start >= end) {
+        throw new Error("לא נמצא מבנה מערך JSON ([...]) תקין או שהנתונים אינם במבנה: [{...}].");
+      }
 
-        // ניקוי: הסרת פסיקים מיותרים (Trailing Commas)
-        jsonString = jsonString.replace(/,\s*([\]}])/g, '$1');
+      // חילוץ המחרוזת בין הגבולות
+      let jsonString = rawText.substring(start, end + 1).trim();
 
-        try {
-          const data = JSON.parse(jsonString);
-          
-          if (Array.isArray(data) && data.length > 0) {
-            return data;
-          }
-        } catch (e) {
-          console.error("שגיאת ניתוח JSON לאחר חילוץ וניקוי:", e);
-          throw new Error("הנתונים חולצו אך עדיין אינם במבנה JSON תקין, גם לאחר ניקוי פסיקים מיותרים. בדוק את מבנה הקובץ המקורי.");
+      // ניקוי: הסרת פסיקים מיותרים (Trailing Commas)
+      // זהו ניקוי חשוב להפיכת JSON לא תקין (עם פסיק בסוף אובייקט או מערך) לתקין
+      jsonString = jsonString.replace(/,\s*([\]}])/g, '$1');
+
+      try {
+        const data = JSON.parse(jsonString);
+        
+        if (Array.isArray(data) && data.length > 0) {
+          return data;
         }
+        
+        if (Array.isArray(data) && data.length === 0) {
+            throw new Error("מבנה ה-JSON נמצא תקין, אך הוא מערך ריק. (אין נתונים)");
+        }
+      } catch (e) {
+        console.error("שגיאת ניתוח JSON לאחר חילוץ וניקוי:", e);
+        // מציג את תחילת המחרוזת שגרמה לשגיאה כדי לסייע בזיהוי הבעיה בקובץ המקור
+        const errorSnippet = jsonString.substring(0, 50).replace(/\n/g, ' ') + '...';
+        throw new Error(`שגיאת JSON.parse: המחרוזת שחולצה ("${errorSnippet}") אינה JSON תקין. בדוק את מבנה הקובץ המקורי.`);
       }
       
-      throw new Error("לא נמצא מבנה נתונים JSON (מערך אנשים) בקובץ שנטען. ייתכן שהנתונים אינם במבנה: [{...}].");
+      throw new Error("נתונים חולצו אך לא עברו את בדיקת המערך התקינה.");
     }
 
 
