--- a/public/a.html
+++ b/public/a.html
@@ -81,25 +81,33 @@
 
     /**
      * פונקציה חזקה לחילוץ מערך JSON של נתונים מתוך טקסט גולמי (כגון קובץ HTML).
-     * היא מחפשת את הגבולות החיצוניים של המערך ([...]) ומתעלמת מהטקסט המקיף.
+     * מחפשת את הגבולות ([...]) של מערך הנתונים הראשי בתוך הקובץ, תוך דגש על מבנה תקין ({...}).
      */
     function extractFamilyData(rawText) {
-      // חיפוש אינדקס הפתיחה של המערך הראשון
-      const start = rawText.indexOf('[');
-      // חיפוש אינדקס הסגירה של המערך האחרון (הכי חיצוני)
-      const end = rawText.lastIndexOf(']');
+      // 1. חיפוש הגבולות החזקים ביותר של מערך המכיל אובייקטים
+      
+      // חיפוש ה-`[` הפותח שמיד אחריו מופיע '{' (למשל, `[{`), מה שמסמן תחילת מערך נתונים
+      const startMatch = rawText.match(/\[\s*\{/);
+      if (!startMatch) {
+        throw new Error("לא נמצאה תחילת מערך נתונים תקינה: '[' ואחריו '{' (למשל, `[{`).");
+      }
+      const start = startMatch.index; // האינדקס של ה-`[` הפותח
 
-      if (start === -1 || end === -1 || start >= end) {
-        throw new Error("לא נמצא מבנה מערך JSON ([...]) תקין או שהנתונים אינם במבנה: [{...}].");
+      // חיפוש ה-`]` הסוגר (האחרון בקובץ)
+      const end = rawText.lastIndexOf(']');
+      
+      if (end === -1 || start >= end) {
+        throw new Error("לא נמצאה סגירת מערך JSON תקינה (']') או שהתחום לא חוקי.");
       }
 
-      // חילוץ המחרוזת בין הגבולות
+      // 2. חילוץ המחרוזת בין הגבולות
       let jsonString = rawText.substring(start, end + 1).trim();
 
-      // ניקוי: הסרת פסיקים מיותרים (Trailing Commas)
+      // 3. ניקוי: הסרת פסיקים מיותרים (Trailing Commas)
       // זהו ניקוי חשוב להפיכת JSON לא תקין (עם פסיק בסוף אובייקט או מערך) לתקין
       jsonString = jsonString.replace(/,\s*([\]}])/g, '$1');
 
+      // 4. ניסיון ניתוח JSON
       try {
         const data = JSON.parse(jsonString);
         
